Fixed callout-container on homepage as it was not showing whole image. Changed color-scheme as a result

--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,7 @@ body {
     color: #FFFFFF;
 }
 .navbar-header {
-    background-color: #b71c1c;
+    background-color: #7f0000;
     color: #FFFFFF;
     font-family: 'Spicy Rice', sans-serif;
     font-weight: 100;
@@ -51,7 +51,7 @@ body {
     left: 0;
     width: 100%;
     z-index: 1;
-    background-color: #b71c1c;
+    background-color: #7f0000;
     border: 0;
     }
 
@@ -276,12 +276,12 @@ margin-bottom: 20px;
 /*---------------------------------------------Fonts, Text Stylings, Block Dividers, Buttons*/
 
 .section-header {
-    color: #b71c1c;
+    color: #7f0000;
 }
 
 .uppercase {
     text-transform: uppercase;
-    color: #b71c1c;
+    color: #7f0000;
 }
 
 .block-divider--white {
@@ -291,7 +291,7 @@ margin-bottom: 20px;
 }
 
 .block-divider--red {
-    background-color: #b71c1c;
+    background-color: #7f0000;
     font-weight: 200;
     width: 60px;
 }
@@ -305,7 +305,7 @@ margin-bottom: 20px;
 }
 .btn--white {
     background-color: #FFFFFF;
-    color: #b71c1c;
+    color: #7f0000;
     text-decoration: bold;
 }
 
@@ -388,7 +388,7 @@ margin-bottom: 20px;
 .callout-container1 {
     min-height: 80vh;
     font-family: 'Acme', sans-serif;
-    background: url("../assets/themonkees-performing.jpg") no-repeat center;
+    background: url("../assets/monkees-callout-desktop.jpg") no-repeat center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -397,7 +397,8 @@ margin-bottom: 20px;
     align-items: center;
     justify-content: center;
     position: relative;
-    top: 15px;
+    top: 0px;
+    margin-top: 15px;
 }
 
 .callout-container2 {
@@ -453,7 +454,7 @@ margin-bottom: 20px;
 
 /*---------------------------------------------Our Music Page*/
 /*--Listen Section*/
-/*
+
 .listen-header {
     text-align: center;
     padding-bottom: 0;
@@ -461,13 +462,13 @@ margin-bottom: 20px;
 }
 
 .container-wrapper--red {
-    background-color: #FF0000;
+    background-color: #7f0000;
     color: #FFFFFF;
     height: 500px;
 }
-*/
+
 .youtube-wrapper {
-    background-color: #b71c1c;
+    background-color: #7f0000;
     }
 
 .youtube-title {
@@ -481,7 +482,7 @@ margin-bottom: 20px;
 }
 
 .history-wrapper1 {
-    background-color: #b71c1c;
+    background-color: #7f0000;
     color: #FFFFFF;
     text-align: center;
     height: 925px;
@@ -490,13 +491,13 @@ margin-bottom: 20px;
 
 .history-wrapper2 {
     background-color: #FFFFFF;
-    color: #b71c1c;
+    color: #7f0000;
     text-align: center;
     height: 1250px;
 
 }
 .history-wrapper-smred {
-    background-color: #b71c1c;
+    background-color: #7f0000;
     color: #FFFFFF;
     text-align: center;
     height: 1250px;
@@ -505,7 +506,7 @@ margin-bottom: 20px;
 
 .history-wrapper-smwhite {
     background-color: #FFFFFF;
-    color: #b71c1c;
+    color: #7f0000;
     text-align: center;
     height: 1250px;
 }
@@ -519,7 +520,7 @@ margin-bottom: 20px;
   }
 
 .our-music-header {
-    color: #b71c1c;
+    color: #7f0000;
 }
 
 .history {
@@ -548,7 +549,7 @@ margin-bottom: 20px;
 .insta-note {
     margin-top: 0;
     margin-bottom: 50px;
-    background-color: #b71c1c;
+    background-color: #7f0000;
     color: #FFFFFF;
     min-height: 25vh;
     padding-top: 50px;
@@ -577,7 +578,7 @@ margin-bottom: 20px;
     text-align: center;
     font-family: 'Acme', sans-serif;
     color: #FFFFFF;
-    background-color: #b71c1c;
+    background-color: #7f0000;
     padding-top: 10px;
     margin-top: 10px;
     margin-bottom: 20px;
@@ -596,7 +597,7 @@ margin-bottom: 20px;
 .quotes {
     font-family: 'Acme', sans-serif;
     color: #FFFFFF;
-    background-color: #b71c1c;
+    background-color: #7f0000;
     margin-bottom: 30px;
 }
 
@@ -668,7 +669,7 @@ font-size: 20px;
 
 }
 .newswrapper-red {
- background-color: #b71c1c;
+ background-color: #7f0000;
     color: #FFFFFF;
     padding: 5px 10px 5px 10px;
     margin-right: auto;
@@ -707,7 +708,7 @@ font-size: 20px;
 }
 
 .history-wrapper-smred {
-    background-color: #b71c1c;
+    background-color: #7f0000;
     color: #FFFFFF;
     text-align: center;
     height: 920px;
@@ -716,7 +717,7 @@ font-size: 20px;
 
 .history-wrapper-smwhite {
     background-color: #FFFFFF;
-    color: #b71c1c;
+    color: #7f0000;
     text-align: center;
     height: 920px;
 }
@@ -735,7 +736,7 @@ font-size: 20px;
 }
 
 .history-wrapper-smred {
-    background-color: #b71c1c;
+    background-color: #7f0000;
     color: #FFFFFF;
     text-align: center;
     height: 920px;
@@ -744,7 +745,7 @@ font-size: 20px;
 
 .history-wrapper-smwhite {
     background-color: #FFFFFF;
-    color: #b71c1c;
+    color: #7f0000;
     text-align: center;
     height: 920px;
 }
@@ -786,7 +787,7 @@ font-size: 20px;
 }
 
 .history-wrapper-smred {
-    background-color: #b71c1c;
+    background-color: #7f0000;
     color: #FFFFFF;
     text-align: center;
     
@@ -794,7 +795,7 @@ font-size: 20px;
 
 .history-wrapper-smwhite {
     background-color: #FFFFFF;
-    color: #b71c1c;
+    color: #7f0000;
     text-align: center;
     
    }
